Event mousemove & mouseleave

--- a/EventMouse/index.html
+++ b/EventMouse/index.html
@@ -25,7 +25,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: url(./footer-galaxy.webp) no-repeat center center/cover;
+        background: url(../Images/footer-galaxy.webp) no-repeat center center/cover;
       }
 
       .wrapper button {
@@ -73,7 +73,7 @@
         <button>On mouse move</button>
       </div>
       <div>
-        <img src="./astrocat.png" alt="" />
+        <img src="../Images/astrocat.png" alt="Banner" />
       </div>
     </div>
     <script>
